starlark-rust/starlark_syntax/src/syntax/grammar_tests/error_missing_colon.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
if True
  pass

Error:
error: Parse error: unexpected new line here, expected one of ":"
 --> error_missing_colon:1:8
  |
1 | if True
  |        ^
2 |   pass
  |


Program:
def foo()
  pass

Error:
error: Parse error: unexpected new line here, expected one of "->" or ":"
 --> error_missing_colon:1:10
  |
1 | def foo()
  |          ^
2 |   pass
  |


Program:
for x in []
  pass

Error:
error: Parse error: unexpected new line here, expected one of ":"
 --> error_missing_colon:1:12
  |
1 | for x in []
  |            ^
2 |   pass
  |
